--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.3.2",
     "antd": "^5.27.4",
+    "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
